--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.5",
+    "chart.js": "^4.4.4",
+    "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -47,6 +53,8 @@
     ]
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.10",
+    "@types/leaflet": "^1.9.12",
     "tailwindcss": "^3.4.10"
   }
 }
